centered welcome text and first step in fixing jumping navbar between home and login page

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -7,11 +7,8 @@
   align-items: center;
 }
 
-.navbar-fenix .welcome-user {
-  margin-right: 10px;
-  display: flex;
-  align-items: center;
-  margin-bottom: O;
+.navbar-fenix p {
+  margin: 0 10px 0 0;
 }
 
 .navbar-light .navbar-nav .nav-link  {
